--- a/demo/index.html
+++ b/demo/index.html
@@ -14,9 +14,16 @@
                 width: 100%;
                 height: 100%;
             }
+
+            #dat{
+                position: absolute;
+                top: 0;
+                right: 0;
+            }
         </style>
     </head>
     <body>
+        <div id="dat"></div>
         <script src="../build/index.js"></script>
     </body>
 </html>
